2017-08-12  John David Anglin  <danglin@gcc.gnu.org>

	[BZ #21016]
	* sysdeps/hppa/nptl/bits/pthreadtypes.h: Update pthread_cond_t typedef.
	* sysdeps/unix/sysv/linux/hppa/pthread.h: Include
	bits/types/struct_timespec.h.
	(PTHREAD_MUTEX_INITIALIZER): Revise define.
	(PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP): Likewise.
	(PTHREAD_ERRORCHECK_MUTEX_INITIALIZER_NP): Likewise.
	(PTHREAD_ADAPTIVE_MUTEX_INITIALIZER_NP): Likewise.
	(PTHREAD_RWLOCK_INITIALIZER): Likewise.
	(PTHREAD_RWLOCK_WRITER_NONRECURSIVE_INITIALIZER_NP): Likewise.
	(PTHREAD_COND_INITIALIZER): Likewise.
	Remove old definitions.
	* sysdeps/unix/sysv/linux/hppa/internaltypes.h: Delete.
	* sysdeps/unix/sysv/linux/hppa/pthread_cond_broadcast.c: Delete.
	* sysdeps/unix/sysv/linux/hppa/pthread_cond_destroy.c: Delete.
	* sysdeps/unix/sysv/linux/hppa/pthread_cond_init.c: Delete.
	* sysdeps/unix/sysv/linux/hppa/pthread_cond_signal.c: Delete.
	* sysdeps/unix/sysv/linux/hppa/pthread_cond_wait.c: Delete.

2017-08-11  Florian Weimer  <fweimer@redhat.com>

	[BZ #21242]
	* assert/assert.h [__GNUC__ && !__STRICT_ANSI__] (assert):
	Suppress pedantic warning resulting from statement expression.
	(__ASSERT_FUNCTION): Add missing __extension__.

2017-08-08  Helge Deller  <deller@gmx.de>

	[BZ #21049]
        * sysdeps/hppa/__longjmp.c (__longjmp): Move call to CHECK_SP up
        to avoid clobbering r26.

2017-08-06  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #21871]
	* sysdeps/x86/cpu-features.c (init_cpu_features): Set
	bit_arch_Use_dl_runtime_resolve_opt only with AVX512F.

2017-08-04  Aurelien Jarno  <aurelien@aurel32.net>

	* sysdeps/i386/i686/fpu/multiarch/libm-test-ulps: Regenerated.

2017-08-03  Aurelien Jarno  <aurelien@aurel32.net>

	* stdlib/getentropy.c (getentropy): Change return type to int.

2017-04-28  Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>

	[BZ #21280]
	* sysdeps/powerpc/power7/fpu/s_logbl.c (__logbl): Ignore the
	signal of subnormals and adjust the exponent of power of 2 down