@@ -1,5 +1,7 @@
 2017-08-12  John David Anglin  <danglin@gcc.gnu.org>
 
+	* sysdeps/hppa/math-tests.h: New.
+
 	[BZ #21016]
 	* sysdeps/hppa/nptl/bits/pthreadtypes.h: Update pthread_cond_t typedef.
 	* sysdeps/unix/sysv/linux/hppa/pthread.h: Include
